# vostok

./: CMakeLists.txt  README.md
Debug/: makefile
Debug/src/: subdir.mk
Debug/src/octree/: subdir.mk
Debug/src/pointCloud/: subdir.mk
Debug/src/solpos/: subdir.mk
Release/: sources.mk
Release/src/: subdir.mk
Release/src/octree/: subdir.mk
Release/src/pointCloud/: subdir.mk
Release/src/solpos/: subdir.mk
src/: IrradianceCalc.cpp  IrradianceCalc.h  OctreeRaycaster.cpp  OctreeRaycaster.h  ProjectConfig.cpp  ProjectConfig.h  ShadowCalc.cpp  ShadowCalc.h  Vec3d.cpp  Vec3d.h  main.cpp  myUtils.cpp  myUtils.h
src/octree/: Octree.cpp  Octree.h  OctreeNode.cpp  OctreeNode.h  OctreeNodeInfo.cpp  OctreeNodeInfo.h
src/pointCloud/: AbstractPointCloud.cpp  AbstractPointCloud.h  SimpleTextPointCloud.cpp  SimpleTextPointCloud.h
src/solpos/: solpos.cpp  solpos00.h
